<resources>
    <string name="app_name">Commando Fit</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="installing">Installing&#8230;</string>
    <string name="processing">Processing&#8230; Please wait</string>
    <string name="installerror">Error installing database. Please try re-installing application.</string>
    <string name="ok_but">OK</string>
    <string name="cancel_but">CANCEL</string>
    <string name="close">CLOSE</string>
    <string name="save">SAVE</string>
    <string name="about">About</string>
    <string name="post_facebook">POST TO FACEBOOK</string>
    <string name="unlicensed_dialog_title">Application not licensed</string>
    <string name="unlicensed_dialog_body">This application is not licensed. Please purchase it from Android Market.</string>
    <string name="unlicensed_dialog_retry_body">Unable to validate license. Check to see if a network connection is available.</string>
    <string name="buy_button">Buy app</string>
    <string name="retry_button">Retry</string>
    <string name="quit_button">Exit</string>
    <string name="reset_progr">RESET EXERCISE PROGRAM</string>
    <string name="reset_maxrep">REMOVE ALL RECOMMENDED WEIGHT VALUES</string>
    <string name="reset_maxrep_cur">REMOVE CURRENT RECOMMENDED WEIGHT VALUE</string>
    <string name="delete_logs">DELETE ALL LOGS</string>
    <string name="logs_removed">Workout log deleted</string>
     <string name="logs_deleted">All workout logs deleted</string>
     <string name="logs_ex_deleted">Exercise log deleted</string>
    <string name="msg_progr_reset_ok">Your exercise program was reset successfully</string>
    <string name="msg_finish">You did not complete all exercises. Tap YES to set this workout as completed, or NO to close this screen without completing the workout (so you can continue it later).</string>
    <string name="msg_start_workout">Tap START to start selected workout outside of Complete exercise program, or CANCEL.</string>
    <string name="msg_finish_module">You did not complete all exercises. Tap CLOSE to finish this workout, or CANCEL to continue.</string>
    <string name="but_all">COMPLETE PROGRAM</string>
    <string name="but_tact">TACTICAL</string>
    <string name="but_endur">STRENGTH / ENDURANCE</string>
    <string name="but_mass">MASS / STRENGTH</string>
    <string name="male">MALE</string>
    <string name="female">FEMALE</string>
    <string name="workout">Workout</string>
    <string name="interview">INTERVIEW</string>
    <string name="interview_subtitle">Before you start, please enter following information:"</string>
    <string name="age">AGE</string>
    <string name="user_name">NAME</string>
    <string name="weight">WEIGHT</string>
    <string name="units">UNITS</string>
    <string name="lbs">lbs</string>
    <string name="kg">kg</string>
    <string name="km">km</string>
    <string name="ml">mi</string>
    <string name="fitness_level">FITNESS LEVEL</string>
    <string name="low">LOW</string>
    <string name="average">AVERAGE</string>
    <string name="high">HIGH</string>
    <string name="next">NEXT</string>
    <string name="edit_later">You can access it from Menu and input later</string>
    <string name="one_rep_max_title">ONE REP MAX CALCULATOR</string>
    <string name="unit_convertx_title">WEIGHT / DISTANCE CONVERTER</string>
    <string name="one_rep_max_subtitle">Enter the weight and number of repetitions performed till failure. This test should be performed with a spotter for reasons of safety.</string>
    <string name="reps">REPS</string>
    <string name="max_rep_msg">YOUR APPROXIMATE 1 REP MAX</string>
    <string name="cardio_zones">Cardio zones</string>
    <string name="done_workout">DONE WORKOUT</string>
    <string name="reset_workout_log">RESET CURRENT WORKOUT LOG</string>
    <string name="but_settings">SETTINGS</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="do_today">DO WORKOUT NOW</string>
    <string name="make_current">MAKE DAY CURRENT</string>
    <string name="logs">VIEW PROGRAM CALENDAR AND WORKOUTS LOGS</string>
    <string name="but_finish">FINISH WORKOUT AND GO TO HOME SCREEN</string>
    <string name="save_and_close">SAVE LOG &amp; CLOSE</string>
    <string name="close_no_save">CLOSE WITHOUT SAVING LOG</string>
    <string name="set_complete">CLOSE &amp; SET DAY COMPLETED</string>
    <string name="set_not_complete">CLOSE WITHOUT COMPLETING THE DAY</string>
    <string name="change">CHANGE</string>
    <string name="advanced">EDIT WEIGHT DISPLAY</string>
    <string name="select_music">SELECT PLAYLIST</string>
    <string name="but_calculate">CALCULATE</string>
    <string name="set_default">SET TO DEFAULT</string>
    <string name="but_onemaxrep">ONE REP MAX</string>
    <string name="but_hr">TARGET HEART RATE (GENERAL)</string>
    <string name="but_hr2">TARGET HEART RATE (KARVONEN)</string>
    <string name="change_date">CHANGE DATE</string>
    <string name="post_status_update">POST STATUS UPDATE</string>
    <string name="post_photo">POST PHOTO</string>
    <string name="music">MUSIC</string>
    <string name="stop">STOP</string>
    <string name="retry">Retry</string>
    <string name="use_no_lisence">Use without license this time</string>
    <string name="quit">Quit</string>
    <string name="unable_validate">Unable to validate license. Check to see if a network connection is available. Please reinstall application if problem persists.</string>
    <string name="cardio_msg_common">Set cardio machine to 5 mi (6 km) per hour</string>
    <string name="lb">lb</string>
    <string name="rest">REST</string>
    <string name="playlists">PLAYLISTS</string>
    <string name="email_us">Drop us a line</string>
    <string name="status_update">Status update message</string>
    <string name="show_shed">Show program schedule</string>
    <string name="filter">Filter</string>
    <string name="increment_start">INCREMENT START</string>
    <string name="interval">INTERVAL</string>
    <string name="weight_increment">WEIGHT INCREMENT:</string>
    <string name="weight_wheel_display">WEIGHT WHEEL DISPLAY</string>
    <string name="log">LOG</string>
    <string name="email_log">Email workout log</string>
    <string name="cardio">CARDIO</string>
    <string name="set">SET</string>
    <string name="ex_list">EXERCISE LIST</string>
    <string name="sets">SETS</string>
    <string name="modules">MODULES</string>
     <string name="calendar_prompt">Choose a log type</string>
     <string-array name="log_modes_arrays">
         <item>Complete program</item>
         <item>Endurance / Mass Modules</item>
         <item>Tactical</item>
     </string-array>
    <string name="calendar_month_prompt">Select month</string>
    <string name="calendar_year_prompt">Select year</string>
  	<string-array name="month_array">
  	    <item>JANUARY</item>
  	    <item>FEBRUARY</item>
  	    <item>MARCH</item>
  	    <item>APRIL</item>
  	    <item>MAY</item>
  	    <item>JUNE</item>
  	    <item>JULY</item>
  	    <item>AUGUST</item>
  	    <item>SEPTEMBER</item>
  	    <item>OCTOBER</item>
  	    <item>NOVEMBER</item>
  	    <item>DECEMBER</item>
  	</string-array>
  	<string-array name="weight_inc">
  	    <item>1</item>
  	    <item>2</item>
  	    <item>3</item>
  	    <item>4</item>
  	    <item>5</item>
  	</string-array>
    <string name="title_all">COMPLETE PTOGRAM</string>
    <string name="title_tact">TACTICAL WORKOUTS</string>
    <string name="title_endur">STRENGTH / ENDURANCE WORKOUTS</string>
    <string name="title_mass">MASS / STRENGTH WORKOUTS</string>
    <string name="title_generic">WORKOUTS</string>
    <string name="title_cardio_zones">:(age %d)</string>
    <string name="title_cardiohr">:(age %1$d, resting heart rate %2$d)</string>
    <string name="calculate">calculate</string>
    <string name="timer">timer</string>
    <string name="options">options</string>
    <string name="help">help</string>
    <string name="start">START</string>
    <string name="select_title">SELECT</string>
    <string name="view">VIEW</string>
    <string name="pause">PAUSE</string>
    <string name="done">DONE</string>
    <string name="complete">COMPLETE</string>
    <string name="complete_workout">YES, DONE WORKOUT</string>
    <string name="not_complete">NOT COMPLETE</string>
    <string name="not_complete_workout">NO, WILL CONTINUE</string>
    <string name="contin">CONTINUE</string>
    <string name="reset">RESET</string>
    <string name="distance">DISTANCE</string>
    <string name="str_type">TYPE</string>
    <string name="time">TIME</string>
    <string name="laps">LAPS</string>
    <string name="remove_last_rep">REMOVE LAST SET</string>
    <string name="clear_log_msg">Remove all log entries for current workout?</string>
     <string name="del_all_logs_msg">Delete all workout logs?</string>
    <string name="msg_reset_progr">Click YES to reset - all workout logs will be deleted and current day set to Block 1 Day 1. Are you sure this is what you want to do?</string>
    <string name="msg_reset_maxrep">Click YES to remove all saved recommended weight values from all exercises, or CANCEL.</string>
    <string name="msg_reset_maxrep_cur">Click YES to remove saved recommended weight values from current exercise, or CANCEL.</string>
    <string name="log_del_witherrors">Log removed with errors</string>
     <string name="logs_del_witherrors">Logs removed with errors</string>
    <string name="msg_no_logs">No workout log found for this workout.</string>
    <string name="date_select_title">Select month and year.</string>
    <string name="calculators">CALCULATORS</string>
    <string name="maxrep">One Rep Max</string>
    <string name="hr_title">Target Heart Rate Calculator (General)</string>
    <string name="hr_subtitle">Target HR Zone 50&#8211;85% from Maximum heart rate</string>
    <string name="hr_karvonen_title">Target Heart Rate Calculator (Karvonen)</string>
    <string name="hr_rest_hr">RESTING HEART RATE</string>
    <string name="hr_karvonen_subtitle">This calculator is more accurate than general hard rate calculator, but requires resting heart rate input. To accurately measure your resting heart rate: Count your pulse on your wrist or on the side of your neck prior to getting out of the bed in the morning. Count the number of beats, starting with zero, for one full minute. For accuracy, take your resting heart rate three mornings in a row and average the heart rates. Target HR Zone 50&#8211;85% from Maximum heart rate.</string>
    <string name="settings_timer">Rest interval between sets (secs)</string>
    <string name="settings_timer_start">Start Rest timer on log save</string>
    <string name="settings_sound">Play sound on time up.</string>
    <string name="settings">SETTINGS</string>
    <string name="settings_advance">Advance to the next exercise when recommended number of sets completed.</string>
    <string name="settings_awake">Prevent application from going to sleep mode when on Workout screen.</string>
    <string name="msg_logs">Seems that you already started this workout today. Tap YES if you would like to continue this workout and load saved logs. Tap NO to start  new workout.</string>
    <string name="mag_select_date">Please select correct month and year.</string>
    <string name="msg_set_day_current">Are you sure you want to change your current day? Tap YES to change, or CANCEL.</string>
    <string name="msg_go_back">Are you sure you want to close workout without completing it? Tap YES to close workout screen or CANCEL to continue.</string>
    <string name="msg_save">Are you sure you want to close workout? Tap SAVE LOG &amp; CLOSE to save workout log, CLOSE WITHOUT SAVING LOG to discard log, or CANCEL to continue workout.</string>
    <string name="msg_progr_completed">Congratulation, you completed the program!</string>
</resources>