<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
<RelativeLayout 
    style="@style/dlgContainer">
 <ImageView android:id="@+id/common_small_close"
 	style="@style/closeButton" />
  <ImageView style="@style/helpButton" />
 <LinearLayout  android:layout_width="match_parent"
   	 android:layout_height="wrap_content" android:orientation="vertical" >
    <TextView
        style="@style/dlgMenuTitle"
	     android:text="@string/calculators" />    
 <com.olmatech.fitness.controls.AppButton
     android:id="@+id/calc_menu_but_onemaxrep"
     style="@style/menuButton"
     android:textAllCaps="true"
     android:tag="maxrep"
     android:onClick="onButtonClick"
     android:text="@string/but_onemaxrep" android:drawableLeft="@drawable/menu_max_rep" />
 <com.olmatech.fitness.controls.AppButton
     android:id="@+id/calc_menu_but_hr"
      style="@style/menuButton"
     android:textAllCaps="true"
     android:tag="hr" android:drawableLeft="@drawable/menu_hr"
     android:onClick="onButtonClick"
     android:text="@string/but_hr" />
 <com.olmatech.fitness.controls.AppButton
     android:id="@+id/calc_menu_but_kar"
     style="@style/menuButton"
     android:textAllCaps="true"
     android:tag="kar" android:drawableLeft="@drawable/menu_hr"
     android:onClick="onButtonClick"
     android:text="@string/but_hr2" />
 <com.olmatech.fitness.controls.AppButton
	     android:id="@+id/calc_but_convert"
	     style="@style/menuButton"  
	     android:onClick="onButtonClick"   
	     android:textAllCaps="true"
	     android:text="Distance / Weight Converter" android:drawableLeft="@drawable/menu_convert"  />
 <com.olmatech.fitness.controls.AppButton
	     android:id="@+id/calc_but_close"
	      style="@style/menuButton"
	     android:onClick="onButtonClick"   
	     android:textAllCaps="true"
	     android:text="@string/close" android:drawableLeft="@drawable/menu_close_but" />  
</LinearLayout>
</RelativeLayout>
</ScrollView>
