<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarAlwaysDrawVerticalTrack="true" >

<RelativeLayout style="@style/dlgContainer" >
	 <TextView android:id="@+id/interview_title"
	     android:layout_width="match_parent"
	     android:layout_height="wrap_content"
	     android:layout_marginTop="@dimen/margin_top_bot"
	     android:layout_marginBottom="20dp"
	     android:layout_alignParentTop="true"
	     android:layout_centerHorizontal="true"
	     android:gravity="center_horizontal"
	     android:text="@string/interview"
	     android:textAppearance="@style/formTitleText" />
	 <!-- Top buttons -->
	 <ImageView android:id="@+id/common_small_close"
 		style="@style/closeButton" />
	<ImageView style="@style/helpButton" />
	<TextView android:id="@+id/interview_subtitle"
	     android:layout_width="match_parent"
	     android:layout_height="wrap_content"     
	     android:layout_marginBottom="20dp"
	     android:layout_below="@+id/interview_title"
	     android:layout_centerHorizontal="true"
	     android:gravity="center_horizontal"	     
	     android:text="@string/interview_subtitle"
	     android:textAppearance="@style/formText" />
<!--  Radio list male - female -->
	<RadioGroup android:id="@+id/interview_radios_mf"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/interview_subtitle"
	    android:layout_centerHorizontal="true"
	    android:paddingLeft="@dimen/radio_group_padding"
	    android:paddingRight="@dimen/radio_group_padding"
	    android:layout_marginBottom="20dp"
	    android:gravity="center_horizontal"
	    android:orientation="horizontal" >
    	<RadioButton
    	    android:id="@+id/radio_male"
    	    style="@style/radioBut"
    	    android:layout_gravity="left|center_vertical"
    	    android:layout_marginRight="6dp"
    	    android:onClick="onRadioButtonClicked"    	    
    	    android:text="@string/male"
    	    android:textAllCaps="true" />
        <RadioButton
            android:id="@+id/radio_female"
            style="@style/radioBut"
            android:layout_gravity="right|center_vertical"
            android:layout_marginLeft="6dp"
            android:onClick="onRadioButtonClicked"            
            android:text="@string/female"
            android:textAllCaps="true" />
   </RadioGroup>
   <!--  Name - Age - Weight -->
   <LinearLayout android:id="@+id/age_cont"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:gravity="center_horizontal"
       android:layout_centerHorizontal="true"
       android:orientation="vertical"
       android:layout_below="@+id/interview_radios_mf" >
        <!--  Name -->
        <TextView
           style="@style/formLblCenter"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"           
           android:layout_marginBottom="6dp"           
           android:text="@string/user_name"
           android:textAllCaps="true" />

         <EditText
             android:id="@+id/interview_name"
             style="@style/formEdit"
             android:layout_marginBottom="10dp"
             android:gravity="center_vertical|center_horizontal" />
       
        <!--  Age -->
         <TextView
           style="@style/formLblCenter"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginBottom="6dp"
           android:text="@string/age"
           android:textAllCaps="true" />

       <EditText
           android:id="@+id/interview_age"
           style="@style/formEdit"
           android:layout_marginBottom="10dp"
           android:gravity="center_vertical|center_horizontal"
           android:inputType="number" />
      
       <!-- Weight -->
       <TextView style="@style/formLblCenter"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginBottom="6dp"
           android:text="WEIGHT" />  

       <EditText
           android:id="@+id/interview_weight"
           style="@style/formEdit"
           android:layout_marginBottom="10dp"
           android:digits="0123456789."
           android:gravity="center_vertical|center_horizontal"
           android:inputType="numberDecimal" />
       
        <!--  Resting hart rate -->       
         <TextView          
           style="@style/formLblCenter"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginBottom="6dp"
           android:text="@string/hr_rest_hr" android:textAllCaps="true" />     

         <EditText
             android:id="@+id/interview_rest_hr"
             style="@style/formEdit"
             android:layout_marginBottom="10dp"
             android:gravity="center_vertical|center_horizontal"
             android:inputType="number" />
         	    
     </LinearLayout>
   <!--  Units -->
   <TextView android:id="@+id/interview_title_units"
	     android:layout_width="match_parent"
	     android:layout_height="wrap_content"  
	     android:layout_marginTop="20dp"   
	     android:layout_marginBottom="@dimen/margin_top_bot"
	     android:layout_below="@+id/age_cont"
	     android:layout_centerHorizontal="true"
	     android:gravity="center_horizontal"
	     android:textAllCaps="true"
	     android:text="@string/units"
	     android:textAppearance="@style/formText" />
   <!--  Radio list units weight -->
	<RadioGroup android:id="@+id/interview_radios_units"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/interview_title_units"
	    android:layout_centerHorizontal="true"
	    android:gravity="center_horizontal"
	    android:paddingLeft="@dimen/radio_group_padding"
	    android:paddingRight="@dimen/radio_group_padding"
	    android:orientation="horizontal" >
    	<RadioButton
    	    android:id="@+id/radio_lbs"
    	    style="@style/radioBut"
    	    android:layout_gravity="left|center_vertical"
    	    android:onClick="onRadioButtonClicked"
    	    android:layout_marginRight="6dp"
    	    android:text="@string/lbs"
    	    android:textAllCaps="true" />
        <RadioButton
            android:id="@+id/radio_kg"
            style="@style/radioBut"
            android:layout_gravity="right|center_vertical"
            android:onClick="onRadioButtonClicked"
            android:layout_marginLeft="6dp"
            android:text="@string/kg"
            android:textAllCaps="true" />
   </RadioGroup>  
<!-- Fitness level -->
<TextView android:id="@+id/interview_title_level"
	     android:layout_width="match_parent"
	     android:layout_height="wrap_content"  
	     android:layout_marginTop="20dp"   
	     android:layout_marginBottom="@dimen/margin_top_bot"
	     android:layout_below="@+id/interview_radios_units"
	     android:layout_centerHorizontal="true"
	     android:gravity="center_horizontal"
	     android:textAllCaps="true"
	     android:text="@string/fitness_level"
	     android:textAppearance="@style/formText" />
  <!--  Radio list fit level -->
	<RadioGroup
	    android:id="@+id/interview_radios_level"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/interview_title_level"
	    android:layout_centerHorizontal="true"
	    android:gravity="center_horizontal"
	    android:orientation="horizontal"
	    android:paddingLeft="@dimen/radio_group_padding"
	    android:paddingRight="@dimen/radio_group_padding" >
    	<RadioButton
    	    android:id="@+id/radio_low"
    	    style="@style/radioBut"
    	    android:layout_gravity="left|center_vertical"
    	    android:layout_marginRight="6dp"
    	    android:gravity="center_vertical|start"
    	    android:onClick="onRadioButtonClicked"
    	    android:text="@string/low"
    	    android:textAllCaps="true" />
        <RadioButton
            android:id="@+id/radio_average"
            style="@style/radioBut"            
            android:onClick="onRadioButtonClicked"
            android:text="@string/average"
            android:textAllCaps="true" />
        <RadioButton
            android:id="@+id/radio_high"
            style="@style/radioBut"
            android:layout_gravity="right|center_vertical"
            android:layout_marginLeft="6dp"
            android:onClick="onRadioButtonClicked"
            android:text="@string/high"
            android:textAllCaps="true" />
   </RadioGroup>
   <LinearLayout android:id="@+id/cont_bottom"
       android:layout_width="fill_parent"       
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/interview_radios_level"	
	    android:orientation="horizontal"
	    android:padding="10dp"	 
	    android:layout_marginTop="20dp"   
	    android:weightSum="1" >   
    <com.olmatech.fitness.controls.AppButton android:id="@+id/interview_but_cancel"
        android:layout_width="0dp"
	    android:layout_height="wrap_content"
	    android:layout_marginRight="10dp"
        style="@style/blueButtonGeneric"
        android:layout_weight="0.5"
	    android:textAllCaps="true" 
	    android:onClick="onButtonClick"
	    android:text="@string/cancel_but" />
   <com.olmatech.fitness.controls.AppButton android:id="@+id/interview_but_save"
        android:layout_width="0dp"
	    android:layout_height="wrap_content"
        style="@style/blueButtonGeneric"
        android:layout_weight="0.5"
        android:layout_marginLeft="10dp"
	    android:textAllCaps="true" 
	    android:onClick="onButtonClick"
	    android:text="@string/save" />
   </LinearLayout>
   <TextView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_alignParentBottom="true"
       android:layout_below="@+id/cont_bottom"
       android:layout_centerHorizontal="true"
       android:layout_marginBottom="@dimen/margin_top_bot"
       android:layout_marginTop="@dimen/margin_top_bot"
       android:gravity="bottom|center_horizontal"
       android:text="@string/edit_later"
       android:textAppearance="@style/formText" />
</RelativeLayout></ScrollView>
