<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" 
   android:layout_width="match_parent" 
   android:layout_height="match_parent" >
  <View
      android:layout_width="match_parent"
      android:layout_height="match_parent"      
      android:background="@drawable/tile_bg" />
  <ImageView android:id="@+id/img_target"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_above="@+id/botFragment"
      android:layout_alignParentRight="true"
      android:layout_marginBottom="40dp"
      android:layout_marginLeft="60dp"
      android:layout_marginRight="20dp"
      android:adjustViewBounds="true"
      android:scaleType="fitXY"
       />
    <com.olmatech.fitness.controls.AppMainButton
        android:id="@+id/butAll"
        style="@style/mainButtonTop"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
         android:layout_marginBottom="20dp"
        android:text="@string/but_all" />    
   <RelativeLayout
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignParentRight="true"
       android:layout_marginRight="20dp"
       android:layout_below="@+id/butAll"      
       android:background="@drawable/main_buttons_bg"
       android:padding="10dp" >
       <TextView
           android:id="@+id/txtMod"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignParentTop="true"
           android:layout_centerHorizontal="true"
           android:layout_marginBottom="8dp"
           android:gravity="center_horizontal"
           android:text="@string/modules"
           android:textColor="#E6E6E6"
           android:textSize="16sp"
           android:textStyle="bold" />             
    <com.olmatech.fitness.controls.AppMainButton
        android:id="@+id/butEndur"
         style="@style/mainButton"  
         android:layout_below="@+id/txtMod"         
        android:text="@string/but_endur" />    
     <com.olmatech.fitness.controls.AppMainButton
        android:id="@+id/butMass"
         style="@style/mainButton"   
         android:layout_below="@+id/butEndur"     
         android:layout_alignLeft="@+id/butEndur"  
         android:layout_alignRight="@+id/butEndur"    
        android:text="@string/but_mass" />    
     <com.olmatech.fitness.controls.AppMainButton
         android:id="@+id/butTact"
         style="@style/mainButton"  
         android:layout_below="@+id/butMass"    
         android:layout_alignLeft="@+id/butEndur"  
         android:layout_alignRight="@+id/butEndur"  
         android:text="@string/but_tact" />	    
   </RelativeLayout>  
    <fragment android:name="com.olmatech.fitness.view.BottomFragment"
        android:id="@+id/botFragment"
        style="@style/bottomBar" />
</RelativeLayout>
