<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_cont"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="6dp" >
   <!--  Titles -->
   <TextView android:id="@+id/log_title"
	     android:layout_width="match_parent"
	     android:layout_height="wrap_content"
	     android:layout_marginTop="@dimen/margin_top_bot"
	     android:layout_marginBottom="@dimen/margin_top_bot"
	     android:layout_alignParentTop="true"
	     android:layout_centerHorizontal="true"
	     android:gravity="center_horizontal"
	     android:text=""
	     android:textAppearance="@style/formTitleText" />
<LinearLayout android:layout_width="match_parent"     
    android:layout_height="wrap_content" android:orientation="vertical"
    android:weightSum="1"
    android:layout_below="@+id/log_title" android:layout_above="@+id/bottom_cont">
<LinearLayout android:id="@+id/exer_container"
     android:layout_width="match_parent"     
    android:layout_height="0dp" android:orientation="vertical"
    android:layout_weight="0.7"  > 
 <RelativeLayout android:id="@+id/list_header"
    style="@style/logListTitles"  >
 <TextView android:id="@+id/title_set"
     style="@style/logTextStyle"  
     android:layout_alignParentLeft="true"   
     android:text="@string/set" />
 <TextView android:id="@+id/title_reps"
     style="@style/logTextStyle"  
     android:layout_toRightOf="@+id/title_set"   
     android:text="@string/reps" />
 <TextView android:id="@+id/title_wt"
     style="@style/logTextStyle"     
     android:layout_toRightOf="@+id/title_reps"
     android:text="@string/weight" />
 <TextView style="@style/logTextStyle"  
      android:layout_toRightOf="@+id/title_wt"   
     android:text="@string/units" />
</RelativeLayout> 
 <!--  LIST --> 
<ExpandableListView android:id="@+id/log_list" 
    style="@style/logListStyle"        
    android:groupIndicator="@android:color/transparent"  />   
  </LinearLayout> <!--  end ex part -->
      <!--  Cardio if any -->
<LinearLayout android:id="@+id/cardio_container"
    android:layout_width="match_parent"     
    android:layout_height="0dp" android:orientation="vertical"
    android:layout_weight="0.3" >
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="30dp"    
    android:textSize="20sp"
    android:textColor="@color/txt_dark"
    android:textStyle="bold"    
    android:background="@drawable/bg_log_cardio_name_item"
    android:gravity="left|center_vertical"
    android:text="@string/cardio" />
<!--  
<LinearLayout 
   style="@style/logListTitles" >   
    
    <TextView 
     style="@style/logTextStyle"     
     android:text="DIST" />
   <TextView 
     style="@style/logTextStyle"    
     android:text="UNITS" />
   <TextView 
     style="@style/logTextStyle"     
     android:text="EQP" />   
     <TextView 
     style="@style/logTextStyle"    
     android:text="TIME" />
    </LinearLayout>
    -->
 <ListView android:id="@+id/list_log_cardio"       
        style="@style/logListStyle" />  
 <!--  end cardio -->
  <!--  devider -->
 <View
     android:layout_width="match_parent"
    android:layout_height="4dp" />  
 </LinearLayout>  <!--  end cardio part -->
 </LinearLayout> <!-- end top --> 
<LinearLayout android:id="@+id/bottom_cont"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"      
    android:layout_centerHorizontal="true"	    
	android:layout_alignParentBottom="true"    
    android:orientation="horizontal" >
<ImageView
    android:id="@+id/log_but_email"
    android:layout_width="48dp"
    android:layout_height="48dp"
    android:layout_gravity="center_vertical"
    android:layout_marginRight="10dp"
    android:adjustViewBounds="true"
    android:onClick="onButtonClick"
    android:scaleType="fitCenter"
    android:src="@drawable/email" />
	<TextView
	    android:id="@+id/help_contact"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center_vertical"
	    android:layout_marginRight="10dp"
	    android:gravity="left|center_vertical"
	    android:text="@string/email_log"
	    android:textAppearance="@style/formText" />
<com.olmatech.fitness.controls.AppButton
    android:id="@+id/log_but_close"
    style="@style/blueButtonGeneric"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:onClick="onButtonClick"
    android:text="@string/close"
    android:textAllCaps="true" />
</LinearLayout>
 </RelativeLayout>